<resources>
    <string name="app_name">TP3_Belgrano_A_Grupo4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>


    /Profile/
    <string name="ubi_profile">Baguio, Philippines</string>
    <string name="name_profile">Macy Johnson</string>
    <string name="des_profile">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="txt_pay">Payment Details</string>
    <string name="txt_referral">Referral Code</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_logut">Logout</string>
    <string name="cancelar">Cancelar</string>
    <string name="txt_pregunta_cerrar_sesion">¿Estás seguro que quieres cerrar sesión?</string>
    <string name="txt_cerrar_sesion">Cerrar Sesion</string>
    <string name="txt_sesion_cerrada">Sesion Cerrada</string>

    /Pantalla en desarrollo/
    <string name="title_screen_dev">Pantalla en desarrollo</string>
    <string name="des_screen_dev">Estamos trabajando para mejorar tu experiencia. ¡Gracias por tu paciencia!</string>

    /Header Drawer/
    <string name="txt_hello_header_drawer">Hello</string>

    /Custom Search/
    <string name="txt_title_search_action_bar">Search Flight</string>

    /Custom Offers/
    <string name="txt_title_offers_action_bar">Offers</string>

    /Custom Search Result/
    <string name="txt_title_one_search_result_action_bar">EZE</string>
    <string name="txt_title_two_search_result_action_bar">LAX</string>
    <string name="txt_sub_title_search_result_action_bar">29 July, 2022</string>

    /Config Modo Oscuro/
    <string name="txt_config_setting">Generales</string>
    <string name="txt_mode_dark_setting">Modo Oscuro</string>


    /Explore/
    <string name="trending">Trending Destinations</string>
    <string name="offers_day">Offers</string>
    <string name="btn_flight_explore">Flight</string>
    <string name="see_all_flight_explore">See all</string>

    /cardView Weekly/
    <string name="weekly_from">FROM</string>
    <string name="weekly_price">price</string>
    <string name="weekly_pais">Pais</string>

    /cardView trending/
    <string name="flight_id">Flight ID</string>
    <string name="country">Country</string>
    <string name="airport_name">Airport Name</string>

    /cardView offer/
    <string name="special_offers">Limited time offer!</string>
    <string name="item_name">Name</string>
    <string name="item_position">Position</string>

    /Bocaya/
    <string name="Boracay">Boracay</string>
    <string name="code">5D4N</string>
    <string name="precio">$349</string>
    <string name="Philippines">Philippines</string>
    <string name="Overview">Overview</string>
    <string name="textBocaya">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="Photos">Photos</string>
    <string name="Book">Book Now</string>


    /Offers/
    <string name="txt_visa_credit">your VISA credit or</string>
    <string name="txt_25_descuento">25% discount</string>
    <string name="txt_debit_cards">debit cards</string>
    <string name="txt_credit_cards">credit cards</string>
    <string name="txt_20_descuento">Get 20% discount</string>
    <string name="txt_master">with your Master</string>


    /Search/
    <string name="txt_departure">Select Departure</string>
    <string name="txt_arrival">Select Arrival</string>
    <string name="txt_date">"Select Date"</string>
    <string name="txt_passanger">Passanger</string>
    <string name="txt_class">Class</string>

    <string name="business_class">test\n</string>
    <string name="los_angeles">LA\n</string>
    <string name="ezeiza_airport">Ezeiza\n</string>
    <string name="from">
        From
    </string>
    <string name="view_details">View Details</string>


</resources>