<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    style="@style/subGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Explore">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_weekly_flifht_list"
        android:layout_width="400dp"
        android:layout_height="212dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rec_btn_flight_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gris_claro"
        android:drawableTop="@drawable/icon_flight_explore"
        android:text="@string/btn_flight_explore"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        style="@style/subGeneral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_weekly_flifht_list" />

    <TextView
        android:id="@+id/text_trendings_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/trending"
        style="@style/subGeneral"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_btn_flight_explore" />

    <TextView
        android:id="@+id/text_see_all_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="4dp"
        android:text="@string/see_all_flight_explore"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_btn_flight_explore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_tranding_dest_list"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_trendings_flights" />

    <TextView
        android:id="@+id/text_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/offers_day"
        style="@style/subGeneral"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_tranding_dest_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_offers_list_explore"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_offer"
        app:layout_constraintVertical_bias="0.195" />
</androidx.constraintlayout.widget.ConstraintLayout>