<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="45dp">

            <TextView
                android:id="@+id/title_one_toolbar_search_result"
                style="@style/titleViewEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_title_one_search_result_action_bar"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

            <ImageView
                android:id="@+id/back_search_result"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/flecha_derecha"/>

            <TextView
                android:id="@+id/title_two_toolbar_search_result"
                style="@style/titleViewEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_title_two_search_result_action_bar"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sub_title_toolbar_search_result"
            style="@style/txtSubEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_sub_title_search_result_action_bar"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="50dp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/three_point_search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="5dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/puntos" />

</LinearLayout>