<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Boracay">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_marginBottom="350dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:src="@drawable/boracay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="108dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="1dp"
                    android:padding="1dp"
                    android:src="@drawable/backarrow" />
                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="205dp"
                    android:layout_weight="1"
                    android:src="@drawable/heartcirculo" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="1dp"
                android:background="@color/white"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/titleViewEdit"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Boracay"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/txtSubEdit2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_image2"
                        android:text="@string/code"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/titleView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:text="@string/precio"
                        android:textAlignment="textEnd" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/Philippines"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_weight="1"
                        android:text="@string/Philippines"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="110dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView150"
                            style="@style/profileText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:layout_weight="1"
                            android:text="@string/Overview"
                            android:textAlignment="textStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView550"
                            style="@style/txtSubEdit3"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:text="@string/textBocaya"
                            android:textAlignment="textStart" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="250dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1150"
                        style="@style/profileText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/Photos"
                        android:textAlignment="textStart" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="300dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:src="@drawable/playa1" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="-10dp"
                        android:layout_marginEnd="-25dp"
                        android:layout_weight="1"
                        android:src="@drawable/playa2" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="140dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="-30dp"
                        android:layout_marginEnd="-40dp"
                        android:layout_weight="1"
                        android:src="@drawable/playa3" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="420dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        style="@style/fondoBoton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Book" />

                </LinearLayout>




            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>