<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_weekly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_weekly"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/paris"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="end|top"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pais_textView"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="28dp"
            android:text="@string/weekly_pais"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_weekly"
            app:layout_constraintStart_toStartOf="@+id/img_weekly" />

        <TextView
            android:id="@+id/text_from"
            android:layout_width="62dp"
            android:layout_height="22dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/weekly_from"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/text_price"
            app:layout_constraintEnd_toEndOf="@+id/img_weekly" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="112dp"
            android:layout_height="29dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:text="@string/weekly_price"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_weekly" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>